--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,21 +10,25 @@ $headerHeight: 40px;
 #content {
   width: 100%;
   height: auto;
+  background-color: #fff;
   .editWrap {
     width: 1200px;
     height: 500px;
-    background-color: gray;
+    background-color: #4791eb;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     #header{
       height: $headerHeight;
       line-height: $headerHeight;
+      display: flex;
+      align-items: center;
+      padding-left: 2px;
       .item{
         display: inline-block;
         // height: 100%;
-        vertical-align: middle;
-        height: 30px;
+        width: 60px;
+        height: 90%;
         border: 1px solid #fff;
         padding: 5px 12px;
       }
